Major bugs squashed

--- a/client/src/components/chat-room/chat-room.css
+++ b/client/src/components/chat-room/chat-room.css
@@ -1,14 +1,20 @@
+.chat-room-wrapper {
+  display: flex;
+}
+
 .room { 
    margin: 0 auto; 
    padding: 0;
    max-width: 700px;
  }
 
-.room .message-container {
-  padding: 20px;
-}
-
-.room form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 700px; }
+.room form { 
+  background: #000; 
+  padding: 3px; 
+  position: fixed; 
+  bottom: 0; 
+  width: 500px; 
+  }
 
 .room form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
 
